# frozen_stuff_code

./: .gitignore  CMakeLists.txt  README.md  adc.c  adc.h  audio_pwm.c  audio_pwm.h  audio_samples.h  main.c
samples/: mcdonalds_music.c  mcdonalds_music.h  myMusic.c  myMusic.h
